--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -322,3 +322,34 @@
 	font-size: 2.4rem;
 	text-align: center;
 }
+
+
+.popup.landing_mod {
+	background-color: #fff !important;
+}
+.landing_hero_iframe {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    transition: all .3s ease-in-out;
+    opacity: 0;
+	visibility: hidden;
+	&.loading_finished {
+		opacity: 1;
+		visibility: visible;
+	}
+	#player {
+		width: 100%;
+		height: 100%;
+	}
+}
+.landing_hero_wrap {
+    pointer-events: none;
+    z-index: 3;
+}
+.btn_wrap.landing_mod {
+    z-index: 3;
+    position: relative;
+}
